tests/negative/semantic/while_condition_float/input.ci
void main() {
    while (1.5) { print("x\n"); }
}
